--- a/.env.local
+++ b/.env.local
@@ -2,7 +2,7 @@ NEXT_PUBLIC_API_URL=https://binhan.satavan.vn
 NEXT_PUBLIC_IMAGE_DOMAIN_URL=binhan.satavan.vn
 NEXT_PUBLIC_DOMAIN_URL=http://localhost:3000
 # NEXT_PUBLIC_DOMAIN_URL=https://pharmacy.satavan.vn
-NEXT_PUBLIC_CHAT_API_URL=https://tintuchpgroup.satavan.vn
+NEXT_PUBLIC_CHAT_API_URL=https://tintucbinhan.satavan.vn
 NEXT_PUBLIC_SECRET_KEY=encodeUserIDForChatService
 
 NEXT_PUBLIC_API_KEY=AIzaSyByramBXoZBX2xLRok263kXI9rYvswFOC4
