--- a/.env.local
+++ b/.env.local
@@ -3,6 +3,7 @@ NEXT_PUBLIC_IMAGE_DOMAIN_URL=binhan.satavan.vn
 NEXT_PUBLIC_DOMAIN_URL=http://localhost:3000
 # NEXT_PUBLIC_DOMAIN_URL=https://pharmacy.satavan.vn
 NEXT_PUBLIC_CHAT_API_URL=https://tintucbinhan.satavan.vn
+# NEXT_PUBLIC_CHAT_API_URL=http://192.168.1.12:5000
 NEXT_PUBLIC_SECRET_KEY=encodeUserIDForChatService
 
 NEXT_PUBLIC_API_KEY=AIzaSyByramBXoZBX2xLRok263kXI9rYvswFOC4
