--- a/.env.local
+++ b/.env.local
@@ -1,14 +1,15 @@
 NEXT_PUBLIC_API_URL=https://binhan.satavan.vn
 NEXT_PUBLIC_IMAGE_DOMAIN_URL=binhan.satavan.vn
-NEXT_PUBLIC_DOMAIN_URL=http://localhost:3000
+# NEXT_PUBLIC_DOMAIN_URL=http://localhost:3000
 # NEXT_PUBLIC_DOMAIN_URL=https://pharmacy.satavan.vn
+NEXT_PUBLIC_DOMAIN_URL=https://duocbinhan.vn
 NEXT_PUBLIC_CHAT_API_URL=https://tintucbinhan.satavan.vn
 # NEXT_PUBLIC_CHAT_API_URL=http://192.168.1.12:5000
 NEXT_PUBLIC_SECRET_KEY=encodeUserIDForChatService
 
-NEXT_PUBLIC_API_KEY=AIzaSyByramBXoZBX2xLRok263kXI9rYvswFOC4
-NEXT_PUBLIC_AUTH_DOMAIN=binhanpharma-6e6b8.firebaseapp.com
-NEXT_PUBLIC_PROJECT_ID=binhanpharma-6e6b8
-NEXT_PUBLIC_STORAGE_BUCKET=binhanpharma-6e6b8.appspot.com
-NEXT_PUBLIC_MESSAGING_SENDER_ID=871638196949
-NEXT_PUBLIC_APP_ID=1:871638196949:web:c0290a4d0d5846c3a7b85c
+NEXT_PUBLIC_API_KEY=AIzaSyDrbeaZnStNdbxtDyvcbd6nJ5A5eqKAtdI
+NEXT_PUBLIC_AUTH_DOMAIN=abiphar.firebaseapp.com
+NEXT_PUBLIC_PROJECT_ID=abiphar
+NEXT_PUBLIC_STORAGE_BUCKET=abiphar.appspot.com
+NEXT_PUBLIC_MESSAGING_SENDER_ID=102665375931
+NEXT_PUBLIC_APP_ID=1:102665375931:web:dd92c75c4a51a22780d99e
