add notify popup

--- a/.env.local
+++ b/.env.local
@@ -6,6 +6,7 @@ NEXT_PUBLIC_DOMAIN_URL=https://duocbinhan.vn
 NEXT_PUBLIC_CHAT_API_URL=https://tintucbinhan.satavan.vn
 # NEXT_PUBLIC_CHAT_API_URL=http://192.168.1.12:5000
 NEXT_PUBLIC_SECRET_KEY=encodeUserIDForChatService
+NEXT_PUBLIC_ZALO_OA_ID=372298235068415893
 
 NEXT_PUBLIC_API_KEY=AIzaSyDrbeaZnStNdbxtDyvcbd6nJ5A5eqKAtdI
 NEXT_PUBLIC_AUTH_DOMAIN=abiphar.firebaseapp.com
