--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-select": "^5.7.2",
+    "react-share": "^4.4.1",
     "react-zoom-pan-pinch": "^3.0.7",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
