--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
     "react-indiana-drag-scroll": "^3.0.3-alpha",
