init checkout with vnpay

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-indiana-drag-scroll": "^3.0.3-alpha",
     "react-infinite-scroll-component": "^6.1.0",
     "react-linkify": "^1.0.0-alpha",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-otp-input": "^3.0.0",
     "react-paginate": "^8.1.4",
     "react-quill": "^2.0.0",
