--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-responsive": "^9.0.2",
     "react-select": "^5.7.2",
     "react-share": "^4.4.1",
+    "react-switch": "^7.0.0",
     "react-zoom-pan-pinch": "^3.0.7",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
