--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.3.2",
     "cookies": "^0.8.0",
     "date-fns": "^2.30.0",
+    "draft-js": "^0.11.7",
     "emoji-picker-react": "^4.4.7",
     "firebase": "^9.19.1",
     "framer-motion": "^8.0.2",
@@ -43,6 +44,7 @@
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-draggable": "^4.4.5",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
