--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase": "^9.19.1",
     "framer-motion": "^8.0.2",
     "http-proxy": "^1.18.1",
+    "jodit-react": "^1.3.39",
     "jwt-encode": "^1.0.1",
     "mem": "^9.0.2",
     "moment": "^2.29.4",
