--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-js-boilerplate",
+  "name": "binhanpharmacy",
   "version": "3.6.0",
   "scripts": {
     "dev": "next dev",
@@ -154,6 +154,5 @@
       "@semantic-release/git",
       "@semantic-release/github"
     ]
-  },
-  "author": "Nduyvu"
+  }
 }
