update custom skeleton and purchased detail

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_API_URL=https://binhan.satavan.vn
 NEXT_PUBLIC_IMAGE_DOMAIN_URL=binhan.satavan.vn
-# NEXT_PUBLIC_DOMAIN_URL=http://localhost:3000
-NEXT_PUBLIC_DOMAIN_URL=https://duocbinhan.vn
+NEXT_PUBLIC_DOMAIN_URL=http://localhost:3000
+# NEXT_PUBLIC_DOMAIN_URL=https://duocbinhan.vn
 
 NEXT_PUBLIC_CHAT_API_URL=https://tintucbinhan.satavan.vn
 NEXT_PUBLIC_SECRET_KEY=encodeUserIDForChatService
