--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.2.1",
     "body-parser": "^1.20.1",
     "classnames": "^2.3.2",
@@ -42,6 +43,7 @@
     "next": "^13.0.6",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.32",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -71,6 +73,7 @@
     "swr": "^2.1.3",
     "tailwind-merge": "^1.10.0",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "tinymce": "^6",
     "uuid": "^9.0.0",
     "yup": "^1.0.2"
   },
