update name type check

--- a/.env.local
+++ b/.env.local
@@ -16,3 +16,5 @@ NEXT_PUBLIC_PROJECT_ID=abiphars
 NEXT_PUBLIC_STORAGE_BUCKET=abiphar.appspot.com
 NEXT_PUBLIC_MESSAGING_SENDER_ID=102665375931
 NEXT_PUBLIC_APP_ID=1:102665375931:web:dd92c75c4a51a22780d99e
+
+NEXT_PUBLIC_TINY_EDITOR_KEY=4neeo9e330yet6ek6ma6rbb8xh289fgjltqq9pnoulm94s6b
