--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tinymce/tinymce-react": "^4.3.0",
+    "antd": "^5.8.2",
     "axios": "^1.2.1",
     "body-parser": "^1.20.1",
     "classnames": "^2.3.2",
@@ -62,7 +63,6 @@
     "react-responsive": "^9.0.2",
     "react-select": "^5.7.2",
     "react-share": "^4.4.1",
-    "react-switch": "^7.0.0",
     "react-zoom-pan-pinch": "^3.0.7",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
